# RLbot

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  create_example_bot.py  main.py  start_bot.bat  test_bot_manager.py
BakkesModPlugin/: CMakeLists.txt  README.md  RLBotBridge.cfg  RLBotBridge.cpp  RLBotBridge.h
bots/example_bot/: README.md
